@@ -110,7 +110,7 @@ $search_str = trim($search_str);
 
 // execute IMAP search
 if ($search_str)
-  $RCMAIL->storage->search($mbox, $search_str, $imap_charset, $_SESSION['sort_col']);
+  $RCMAIL->storage->search($mbox, $search_str, $imap_charset, $sort_column);
 
 // save search results in session
 if (!is_array($_SESSION['search']))
@@ -124,7 +124,7 @@ $_SESSION['search_request'] = $search_request;
 
 
 // Get the headers
-$result_h = $RCMAIL->storage->list_messages($mbox, 1, $_SESSION['sort_col'], $_SESSION['sort_order']);
+$result_h = $RCMAIL->storage->list_messages($mbox, 1, rcmail_sort_column(), rcmail_sort_order());
 $count = $RCMAIL->storage->count($mbox, $RCMAIL->storage->get_threading() ? 'THREADS' : 'ALL');
 
 
