@@ -181,7 +181,9 @@
 		<ul class="proplist">
 			<li><label class="disabled"><input type="checkbox" name="list_col[]" value="threads" checked="checked" disabled="disabled" /> <roundcube:label name="threads" /></label></li>
 			<li><label class="disabled"><input type="checkbox" name="list_col[]" value="subject" checked="checked" disabled="disabled" /> <roundcube:label name="subject" /></label></li>
-			<li><label><input type="checkbox" name="list_col[]" value="from" /> <roundcube:label name="fromto" /></label></li>
+			<li><label><input type="checkbox" name="list_col[]" value="fromto" /> <roundcube:label name="fromto" /></label></li>
+			<li><label><input type="checkbox" name="list_col[]" value="from" /> <roundcube:label name="from" /></label></li>
+			<li><label><input type="checkbox" name="list_col[]" value="to" /> <roundcube:label name="to" /></label></li>
 			<li><label><input type="checkbox" name="list_col[]" value="replyto" /> <roundcube:label name="replyto" /></label></li>
 			<li><label><input type="checkbox" name="list_col[]" value="cc" /> <roundcube:label name="cc" /></label></li>
 			<li><label><input type="checkbox" name="list_col[]" value="date" /> <roundcube:label name="date" /></label></li>
@@ -201,7 +203,9 @@
 			<li><label><input type="radio" name="sort_col" value="arrival" /> <roundcube:label name="arrival" /></label></li>
 			<li><label><input type="radio" name="sort_col" value="date" /> <roundcube:label name="sentdate" /></label></li>
 			<li><label><input type="radio" name="sort_col" value="subject" /> <roundcube:label name="subject" /></label></li>
-			<li><label><input type="radio" name="sort_col" value="from" /> <roundcube:label name="fromto" /></label></li>
+			<li><label><input type="radio" name="sort_col" value="fromto" /> <roundcube:label name="fromto" /></label></li>
+			<li><label><input type="radio" name="sort_col" value="from" /> <roundcube:label name="from" /></label></li>
+			<li><label><input type="radio" name="sort_col" value="to" /> <roundcube:label name="to" /></label></li>
 			<li><label><input type="radio" name="sort_col" value="cc" /> <roundcube:label name="cc" /></label></li>
 			<li><label><input type="radio" name="sort_col" value="size" /> <roundcube:label name="size" /></label></li>
 		</ul>
